[package]
name = "leger-rs"
version = "0.1.0"
authors = ["Cyril Fougeray <cyril.fougeray@gmail.com>"]
edition = "2018"

[lib]
name = "leger"
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
embedded-nal = { version="0.1.0", path = "../embedded-nal/" }
embedded-websocket = "0.3.2"
no-std-net = "0.4.0"
serde = { version = "1.0.117", default-features = false, features = ["derive"] } # no-std
serde-json-core = "0.1.0"
heapless = "0.5.6"
ed25519-compact = "0.1.9"
hex = { version = "0.4.2",  default-features = false } # no-std