[package]
name = "leger-rs"
version = "0.1.0"
authors = ["Cyril Fougeray <cyril.fougeray@gmail.com>"]
edition = "2018"

[lib]
name = "leger"
crate-type = ["rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7.3", default-features = false}
embedded-nal = { version="0.2.0" }
embedded-websocket = "0.3.2"
no-std-net = "0.4.0"
serde = { version = "1.0.117", default-features = false, features = ["derive"] }
serde-json-core = "0.1.0"
heapless = "0.5.6"
hex = { version = "0.4.2",  path = "../rust-hex/",  default-features = false } # Using specific branch, waiting for PR (https://github.com/KokaKiwi/rust-hex/pull/42)
blake2-rfc = { version = "0.2.18", default-features = false }
bs58 = { version = "0.4.0", default-features = false }
schnorrkel = { version = "0.9.1", optional = true, default-features = false }
panic-halt = { version = "0.2.0", optional = true }

[features]
default = ["rand/small_rng", "panic-halt"]
std = ["schnorrkel/getrandom", "schnorrkel/u64_backend", "schnorrkel/rand", "rand/std"]